--- a/web/src/app.css
+++ b/web/src/app.css
@@ -16,6 +16,10 @@ button.cancel {
 	@apply rounded-md bg-gray-100 px-6 py-3 text-sm font-medium text-gray-700 transition-colors hover:bg-gray-200 disabled:cursor-not-allowed disabled:bg-gray-50;
 }
 
+button.lightweight {
+	@apply rounded-md bg-white border border-gray-500 px-6 py-3 font-medium text-gray-500 transition-colors hover:bg-gray-100 disabled:cursor-not-allowed disabled:bg-gray-50;
+}
+
 button.success {
 	@apply rounded-md bg-green-600 px-6 py-3 text-sm font-medium text-white transition-colors hover:bg-green-700 disabled:cursor-not-allowed disabled:bg-green-300;
 }
@@ -33,4 +37,8 @@ input.classic[type='number'],
 input.classic[type='url'],
 select.classic {
 	@apply min-h-10 rounded-md border-gray-300 px-3 py-2 shadow-sm focus:border-slate-900 focus:ring-slate-900;
+}
+
+input[type='checkbox'] {
+	@apply cursor-pointer;
 }
