--- a/web/src/app.css
+++ b/web/src/app.css
@@ -17,7 +17,7 @@ button.cancel {
 }
 
 button.lightweight {
-	@apply rounded-md bg-white border border-gray-500 px-6 py-3 font-medium text-gray-500 transition-colors hover:bg-gray-100 disabled:cursor-not-allowed disabled:bg-gray-50;
+	@apply rounded-md border border-gray-500 bg-white px-6 py-3 font-medium text-gray-500 transition-colors hover:bg-gray-100 disabled:cursor-not-allowed disabled:bg-gray-50;
 }
 
 button.success {
