--- a/web/src/lib/components/workspace/tabs/rubric.css
+++ b/web/src/lib/components/workspace/tabs/rubric.css
@@ -12,23 +12,23 @@ rubric-table {
 	}
 
 	scroll-container {
-		@apply flex-grow overflow-x-auto;
+		@apply grow overflow-x-auto;
 
 		> content {
-			@apply flex flex-grow flex-row items-stretch justify-center text-left text-sm;
+			@apply flex grow flex-row items-stretch justify-center text-left text-sm;
 
 			> * {
 				@apply flex-1 p-2;
 			}
 
 			> :not(:first-child) {
-				@apply border-l-1;
+				@apply border-l;
 			}
 		}
 	}
 
 	criteria {
-		@apply flex flex-grow flex-col items-center justify-center p-2 text-center;
+		@apply flex grow flex-col items-center justify-center p-2 text-center;
 	}
 
 	scoring {
@@ -51,7 +51,7 @@ rubric-table {
 		@apply flex flex-col;
 
 		> :not(:first-child) {
-			@apply border-t-1;
+			@apply border-t;
 		}
 
 		> row {
@@ -62,7 +62,7 @@ rubric-table {
 			}
 
 			> * {
-				@apply flex-grow border-r-3;
+				@apply grow border-r-3;
 			}
 
 			scroll-container {
